--- a/app/src/main/res/layout/row_video.xml
+++ b/app/src/main/res/layout/row_video.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/MainContentWidthStyle"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -46,5 +46,5 @@
             app:layout_constraintVertical_bias="1.0"
             tools:text="TextViewTextViewTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewT extViewText ViewTextViewTex tVi ewTextViewTextViewTextViewTextViewTextView TextViewTextViewTextViewTextViewT extViewTextViewTextViewTextVi ewTextViewTextViewTextViewTextVie wTextViewTextViewTextViewText ViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewTextViewT extVi ewTextVie wTextView TextViewTextVi ewTextViewTextViewText ViewTextViewTextViewTextViewT extViewTextViewTextViewTextViewText ViewTextViewTextView" />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
