--- a/app/src/main/res/menu/fragment_posts.xml
+++ b/app/src/main/res/menu/fragment_posts.xml
@@ -8,6 +8,6 @@
     <item
         android:id="@+id/search"
         android:title="@string/search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="never|collapseActionView" />
 </menu>
