--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- KEEP VALUES IN SYNC WIT PreferenceHolder.kt -->
+    <!-- KEEP VALUES IN SYNC WITH PreferenceHolder.kt -->
 
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="useDarkTheme"
-        android:title="@string/use_dark_theme" />
+        android:title="@string/use_dark_theme"
+        app:iconSpaceReserved="false" />
 
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="allowAnalytics"
         android:summary="@string/google_analytics_settings_reason"
-        android:title="@string/allow_google_analytics" />
+        android:title="@string/allow_google_analytics"
+        app:iconSpaceReserved="false" />
 
     <ListPreference
         android:defaultValue="@string/prefPushTopicsDefaultValue"
@@ -20,14 +23,18 @@
         android:entries="@array/prefPushTopicsEntries"
         android:entryValues="@array/prefPushTopicsEntryValues"
         android:key="pushTopics"
-        android:title="@string/select_push_topics" />
+        android:title="@string/select_push_topics"
+        app:iconSpaceReserved="false" />
 
     <CheckBoxPreference
         android:defaultValue="false"
         android:key="pushDeals"
-        android:title="@string/push_deals" />
+        android:title="@string/push_deals"
+        app:iconSpaceReserved="false" />
 
-    <Preference android:title="@string/legal_notice">
+    <Preference
+        android:title="@string/legal_notice"
+        app:iconSpaceReserved="false">
         <intent android:action="de.maxisma.allaboutsamsung.ViewLegalNotice" />
     </Preference>
 </PreferenceScreen>
