--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- TODO Try to inline color values -->
+
     <color name="colorPrimary">#034ea1</color>
     <color name="colorPrimaryDark">#023a7a</color>
     <color name="darkColorPrimary">#032c57</color>
@@ -10,4 +12,9 @@
     <color name="lighter_gray">#e2e2e2</color>
     <color name="titleBackgroundColor">#80000000</color>
     <color name="almostWhite">#f5f5f5</color>
+    <color name="windowBackgroundColor">@color/almostWhite</color>
+    <color name="textColor">@android:color/white</color>
+    <color name="inverseTextColor">@android:color/black</color>
+
+    <color name="preferencesTextColor">@android:color/black</color>
 </resources>
